<resources>
    <string name="app_name" translatable="false">ChefBook</string>
    <string name="empty_fields">Please fill in the fields</string>
    <string name="authentication_failed">Email or password is incorrect</string>
    <string name="login">Log In</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_member">Not a member yet?&#160;</string>
    <string name="already_member">Already a member?&#160;</string>
    <string name="signup">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="short_password">Password must contain at least 8 characters</string>
    <string name="lower_password">Password must contain at least 1 lower character</string>
    <string name="upper_password">Password must contain at least 1 upper character</string>
    <string name="number_password">Password must contain at least 1 digit</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="space_password">Password mustn\'t contain spaces</string>
    <string name="invalid_email">Type correct email</string>
    <string name="signup_failed">Sign up failed. Are you already a member?</string>
    <string name="reset_password_successfully">Password Reset link was sent to email</string>
    <string name="reset_password_failed">Password Reset failed. Try again</string>
    <string name="login_successfully">Logged in successfully</string>
    <string name="failed_to_reset">Failed to reset password. Try again</string>
    <string name="failed_to_google">Failed to login via Google. Try again</string>
    <string name="recipes">Recipes</string>
    <string name="servings_placeholder">Servings: %1$d</string>
    <string name="calories_placeholder">%1$d kcal</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_name">Name</string>
    <string name="cupcake">Cupcakes</string>
    <string name="servings_colon">Servings:</string>
    <string name="calories_kcal">Calories (per 100 g):</string>
    <string name="hide">hide</string>
    <string name="time_colon">Time:</string>
    <string name="choose_categories">Choose Categories…</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="section">Section</string>
    <string name="cooking">Cooking</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="recipe">Recipe</string>
    <string name="select_categories">Select Categories</string>
    <string name="new_category">New category</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="recipe_menu">Recipe Menu</string>
    <string name="user">User</string>
    <string name="shopping_list_by_default">Shopping List Tab by Default</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="add_item">Add Item</string>
    <string name="add">Add</string>
    <string name="_12_servings">12 servings</string>
    <string name="divider" translatable="false">|</string>
    <string name="_1700_kcal">1700 kcal</string>
    <string name="to_shopping_list">To Shopping List</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="categories">Categories</string>
    <string name="updated_recently">Updated recently</string>
    <string name="all_recipes">All Recipes</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="category">Category</string>
    <string name="minutes">min</string>
    <string name="hours">h</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="item">Item</string>
    <string name="step_number" translatable="false">1.</string>
    <string name="_1" translatable="false">1</string>
    <string name="step">Step</string>
    <string name="broccoli">Broccoli</string>
    <string name="shopping_list">Shopping List</string>
    <string name="search_results">Results</string>
    <string name="app_info">Made by Mikhail Levin</string>
    <string name="app_ver" translatable="false">4.0</string>
    <string name="about_app">About app</string>
    <string name="special_to">Special for T. I.</string>
    <string name="buy_premium">Buy Premium / Donate</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2240420199912180/3421911394</string>
    <string name="donate">Donate</string>
    <string name="support_info">Your support really helps me to pay for the server and develop products (for example, creating iOS-version)</string>
    <string name="small_donate">Starter Pack Donation</string>
    <string name="middle_donation">Advanced Donation</string>
    <string name="big_donation">Ultra Donation</string>
    <string name="already_donated">Donated before, but Premium unactive?</string>
    <string name="big_donate_price">$5</string>
    <string name="middle_donate_price">$3</string>
    <string name="small_donate_price">$1</string>
    <string name="support_email" translatable="false">support@chefbook.space</string>
    <string name="failed_edit_recipe">Failed to edit recipe</string>
    <string name="recipe_deleted">Recipe deleted</string>
    <string name="deleting_failed">Recipe updating failed</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="enter_name">Please enter the name</string>
    <string name="enter_ingredients">Please add at least 1 ingredient</string>
    <string name="enter_step">Please describe at least 1 step</string>
    <string name="recipe_added">Recipe added</string>
    <string name="recipe_updated">Recipe updated</string>
    <string name="failed_update">Recipe updating failed</string>
    <string name="failed_add">Recipe adding failed</string>
    <string name="gratitude">Thanks for your support 🥰</string>
    <string name="restart">Restart app to activate Premium</string>
    <string name="broccy_happy">Broccy is happy!</string>
    <string name="no_ads">No ads</string>
    <string name="unlimited_recipes">Unlimited recipes count</string>
    <string name="troubles">Have problems or suggestions?</string>
    <string name="added_to_shopping_list">Selected ingredients have been added to the Shopping List</string>
    <string name="recipes_limit">Please, buy Premium to add more than 15 recipes</string>
    <string name="google" translatable="false">Google</string>
    <string name="rate_app">Rate ChefBook</string>
    <string name="rate_gratitude">Thanks for review!</string>
    <string name="type_something">Type something…</string>
    <string name="server_unavailable">Couldn\'t reach server. Check your internet connection.</string>
    <string name="private_recipe">Private</string>
    <string name="shared_recipe">By link</string>
    <string name="public_recipe">Public</string>
    <string name="online">Online</string>
    <string name="signup_successfully">Validation email has been sent to address.</string>
    <string name="delete_purchased">Delete Purchased</string>
    <string name="kcal">kcal</string>
    <string name="broccoli_emoji" translatable="false">🥦</string>
    <string name="edit_category">Edit Category</string>
    <string name="local">Local</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="free_plan" translatable="false">FREE</string>
    <string name="manage_subscription">Manage subscription / Donate</string>
    <string name="settings">App settings</string>
    <string name="author">Author</string>
    <string name="servings">Servings</string>
    <string name="time">Time</string>
    <string name="caloricity">Calories</string>
    <string name="info">Info</string>
    <string name="profile">Profile</string>
    <string name="broccoins">Broccoins</string>
    <string name="subscription">Subscription</string>
    <string name="premium_plan" translatable="false">PREMIUM</string>
    <string name="edit_profile_info">Name, avatar, delete profile</string>
    <string name="settings_info">Default tab, theme, recipe uploading</string>
    <string name="about_app_info">Contacts, support</string>
    <string name="try_chefbot">Try ChefBot!</string>
    <string name="rate_app_info">Help to pay for server!</string>
    <string name="remote_profile_info">Sync, community recipes and more!</string>
    <string name="local_profile">Local Profile</string>
    <string name="app_theme">Theme</string>
    <string name="select_local_source">Disable Sync</string>
    <string name="select_local_source_info">Store recipes only locally</string>
    <string name="shopping_list_by_default_info">Open Shopping List at launch</string>
    <string name="show_news">Show News in Profile</string>
    <string name="show_news_info">Hints and app news</string>
    <string name="app_icon">Icon</string>
    <string name="icon_standard">Standard</string>
    <string name="icon_old">Old</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="profile_name">Name</string>
    <string name="broccoins_info">What is Broccoins?</string>
    <string name="broccoins_info_description">Broccoins is a ChefBook\'s internal currency. It can be obtained EXCLUSIVELY for free. It will NEVER be available for real money.</string>
    <string name="broccoins_purposes">Purpose</string>
    <string name="broccoins_purposes_description">Broccoins shows the user\'s contribution to the development of the project. I want to thank such people. Every 100 broccoins (the value may change in the future) add the ability to create 1 additional recipe in a free subscription.</string>
    <string name="how_to_get">How to get?</string>
    <string name="broccoins_receiving_description">Report bugs (in the VK group or by mail), get likes for your recipes, or just help our small community.</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="delete_remote_data">DELETE REMOTE DATA</string>
    <string name="edit_avatar">Upload avatar</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="change_name">Change name</string>
    <string name="avatar_updated">Avatar has been updated</string>
    <string name="avatar_deleted">Avatar has been deleted</string>
    <string name="name_changed">Name has been changed</string>
    <string name="author_colon">Author:</string>
    <string name="description_dots">Description…</string>
    <string name="link">Link</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="encrypted_recipes">Encrypted Recipes</string>
    <string name="storage_password">Vault Password</string>
    <string name="invalid_storage_password">Invalid Vault Password</string>
    <string name="likes">Likes</string>
    <string name="encryption_info">If you are professional cook or just need more privacy, with CheBook you can encrypt your recipes.\n\nCome up with password for the encrypted recipe Vault. Please note that it cannot be restored in case of loss.</string>
    <string name="delete_vault">Delete Vault</string>
    <string name="change_password">Change Password</string>
    <string name="lock_vault">Lock Vault</string>
    <string name="vault_unlocked_info">Vault is unlocked. Encrypted recipes are displayed in recipe list.</string>
    <string name="short_password_vault">Vault password must contain at least 4 characters</string>
    <string name="vault_creation_error">Failed to create Vault</string>
    <string name="lock_vault_error">Unable to lock Vault</string>
    <string name="vault_unlocked">Vault unlocked. Encrypted recipes is appearing now.</string>
    <string name="vault_created">Vault created</string>
</resources>