<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/app_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/donate"
                android:textColor="@color/monochrome_invert"
                android:textSize="24sp"
                app:fontFamily="@font/comfortaa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/unlimited_recipes"
                android:textColor="@color/deep_orange_light"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_ads"
                android:textColor="@color/deep_orange_light"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="96dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/selector_input" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/support_info"
                android:textSize="16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/small_donate"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_small_donation"
                    android:layout_width="48dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_button"
                    android:gravity="center"
                    android:text="@string/small_donate_price" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/middle_donation"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_middle_donation"
                    android:layout_width="48dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_button"
                    android:gravity="center"
                    android:text="@string/middle_donate_price" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/big_donation"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_big_donation"
                    android:layout_width="48dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_button"
                    android:gravity="center"
                    android:text="@string/big_donate_price" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="96dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/selector_input" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/already_donated"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/support_email"
                android:textColor="@color/deep_orange_light"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>