<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:requiresFadingEdge="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.ChefBook.Header.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ingredients"
            android:textColor="@color/monochrome_invert" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_servings"
                android:textColor="@color/navigation_ripple"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:text="@string/divider"
                android:textColor="@color/deep_orange_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1700_kcal"
                android:textColor="@color/navigation_ripple"
                android:textSize="24sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:nestedScrollingEnabled="false"
            tools:itemCount="2"
            tools:listitem="@layout/list_selectable" />

        <Button
            android:id="@+id/btn_add_to_shoplist"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/to_shopping_list"
            android:textColor="@color/deep_orange_light"
            android:visibility="gone"
            app:icon="@drawable/ic_add"
            app:iconTint="@color/deep_orange_light" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>